src/gen/TemplateParser.py
# Generated from grammar/TemplateParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TemplateParser ( Parser ):

    grammarFileName = "TemplateParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'}}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'%}'", "'if'", 
                     "'endif'", "'for'", "'endfor'", "'in'", "'set'", "'='", 
                     "'.'", "'#'", "'{'", "'}'", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "JPRINT_OPEN", "JPRINT_CLOSE", "JSTMT_OPEN", 
                      "JSTMT_CLOSE", "CSS_BLOCK_START", "CSS_BLOCK_END", 
                      "LT", "LT_SLASH", "GT", "SLASH", "IF", "ENDIF", "FOR", 
                      "ENDFOR", "IN", "SET", "ASSIGN", "EQ", "NEQ", "LE", 
                      "GE", "LT_OP", "GT_OP", "PLUS", "MINUS", "STAR", "DIV", 
                      "NOT", "AND", "OR", "LBRACE", "RBRACE", "COLON", "SEMI", 
                      "DOT", "HASH", "LPAREN", "RPAREN", "NAME", "NUMBER", 
                      "STRING", "TEXT", "WS_R", "TAG_WS", "ERR_TAG", "EXPR_WS", 
                      "ERR_EXPR", "STMT_WS", "ERR_STMT", "CSS_WS", "ERR_CSS", 
                      "GT_R", "SLASH_R", "JPRINT_CLOSE_R", "LPAREN_R", "RPAREN_R", 
                      "EQ_R", "NEQ_R", "LE_R", "GE_R", "LTOP_R", "PLUS_R", 
                      "MINUS_R", "STAR_R", "NOT_R", "AND_R", "OR_R", "JSTMT_CLOSE_R", 
                      "IF_R", "ENDIF_R", "FOR_R", "ENDFOR_R", "IN_R", "SET_R", 
                      "ASSIGN_R", "DOT_R", "HASH_R", "LBRACE_R", "RBRACE_R", 
                      "COLON_R", "SEMI_R" ]

    RULE_document = 0
    RULE_block = 1
    RULE_node = 2
    RULE_htmlElement = 3
    RULE_openTag = 4
    RULE_closeTag = 5
    RULE_htmlContent = 6
    RULE_htmlNode = 7
    RULE_jinjaPrint = 8
    RULE_jinjaStmt = 9
    RULE_jinjaIf = 10
    RULE_jinjaFor = 11
    RULE_jinjaSet = 12
    RULE_cssBlock = 13
    RULE_cssRule = 14
    RULE_selector = 15
    RULE_cssDecl = 16
    RULE_cssProp = 17
    RULE_cssValue = 18
    RULE_expr = 19
    RULE_orExpr = 20
    RULE_andExpr = 21
    RULE_eqExpr = 22
    RULE_relExpr = 23
    RULE_addExpr = 24
    RULE_mulExpr = 25
    RULE_unaryExpr = 26
    RULE_primary = 27

    ruleNames =  [ "document", "block", "node", "htmlElement", "openTag", 
                   "closeTag", "htmlContent", "htmlNode", "jinjaPrint", 
                   "jinjaStmt", "jinjaIf", "jinjaFor", "jinjaSet", "cssBlock", 
                   "cssRule", "selector", "cssDecl", "cssProp", "cssValue", 
                   "expr", "orExpr", "andExpr", "eqExpr", "relExpr", "addExpr", 
                   "mulExpr", "unaryExpr", "primary" ]

    EOF = Token.EOF
    JPRINT_OPEN=1
    JPRINT_CLOSE=2
    JSTMT_OPEN=3
    JSTMT_CLOSE=4
    CSS_BLOCK_START=5
    CSS_BLOCK_END=6
    LT=7
    LT_SLASH=8
    GT=9
    SLASH=10
    IF=11
    ENDIF=12
    FOR=13
    ENDFOR=14
    IN=15
    SET=16
    ASSIGN=17
    EQ=18
    NEQ=19
    LE=20
    GE=21
    LT_OP=22
    GT_OP=23
    PLUS=24
    MINUS=25
    STAR=26
    DIV=27
    NOT=28
    AND=29
    OR=30
    LBRACE=31
    RBRACE=32
    COLON=33
    SEMI=34
    DOT=35
    HASH=36
    LPAREN=37
    RPAREN=38
    NAME=39
    NUMBER=40
    STRING=41
    TEXT=42
    WS_R=43
    TAG_WS=44
    ERR_TAG=45
    EXPR_WS=46
    ERR_EXPR=47
    STMT_WS=48
    ERR_STMT=49
    CSS_WS=50
    ERR_CSS=51
    GT_R=52
    SLASH_R=53
    JPRINT_CLOSE_R=54
    LPAREN_R=55
    RPAREN_R=56
    EQ_R=57
    NEQ_R=58
    LE_R=59
    GE_R=60
    LTOP_R=61
    PLUS_R=62
    MINUS_R=63
    STAR_R=64
    NOT_R=65
    AND_R=66
    OR_R=67
    JSTMT_CLOSE_R=68
    IF_R=69
    ENDIF_R=70
    FOR_R=71
    ENDFOR_R=72
    IN_R=73
    SET_R=74
    ASSIGN_R=75
    DOT_R=76
    HASH_R=77
    LBRACE_R=78
    RBRACE_R=79
    COLON_R=80
    SEMI_R=81

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(TemplateParser.BlockContext,0)


        def EOF(self):
            return self.getToken(TemplateParser.EOF, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = TemplateParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.block()
            self.state = 57
            self.match(TemplateParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TemplateParser.NodeContext)
            else:
                return self.getTypedRuleContext(TemplateParser.NodeContext,i)


        def getRuleIndex(self):
            return TemplateParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TemplateParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 59
                    self.node() 
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlElement(self):
            return self.getTypedRuleContext(TemplateParser.HtmlElementContext,0)


        def jinjaPrint(self):
            return self.getTypedRuleContext(TemplateParser.JinjaPrintContext,0)


        def jinjaStmt(self):
            return self.getTypedRuleContext(TemplateParser.JinjaStmtContext,0)


        def cssBlock(self):
            return self.getTypedRuleContext(TemplateParser.CssBlockContext,0)


        def TEXT(self):
            return self.getToken(TemplateParser.TEXT, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNode" ):
                return visitor.visitNode(self)
            else:
                return visitor.visitChildren(self)




    def node(self):

        localctx = TemplateParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_node)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.htmlElement()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.jinjaPrint()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.jinjaStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.cssBlock()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.match(TemplateParser.TEXT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def openTag(self):
            return self.getTypedRuleContext(TemplateParser.OpenTagContext,0)


        def htmlContent(self):
            return self.getTypedRuleContext(TemplateParser.HtmlContentContext,0)


        def closeTag(self):
            return self.getTypedRuleContext(TemplateParser.CloseTagContext,0)


        def getRuleIndex(self):
            return TemplateParser.RULE_htmlElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlElement" ):
                listener.enterHtmlElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlElement" ):
                listener.exitHtmlElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlElement" ):
                return visitor.visitHtmlElement(self)
            else:
                return visitor.visitChildren(self)




    def htmlElement(self):

        localctx = TemplateParser.HtmlElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_htmlElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.openTag()
            self.state = 73
            self.htmlContent()
            self.state = 74
            self.closeTag()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpenTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(TemplateParser.LT, 0)

        def NAME(self):
            return self.getToken(TemplateParser.NAME, 0)

        def GT(self):
            return self.getToken(TemplateParser.GT, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_openTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpenTag" ):
                listener.enterOpenTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpenTag" ):
                listener.exitOpenTag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpenTag" ):
                return visitor.visitOpenTag(self)
            else:
                return visitor.visitChildren(self)




    def openTag(self):

        localctx = TemplateParser.OpenTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_openTag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(TemplateParser.LT)
            self.state = 77
            self.match(TemplateParser.NAME)
            self.state = 78
            self.match(TemplateParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CloseTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT_SLASH(self):
            return self.getToken(TemplateParser.LT_SLASH, 0)

        def NAME(self):
            return self.getToken(TemplateParser.NAME, 0)

        def GT(self):
            return self.getToken(TemplateParser.GT, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_closeTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCloseTag" ):
                listener.enterCloseTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCloseTag" ):
                listener.exitCloseTag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCloseTag" ):
                return visitor.visitCloseTag(self)
            else:
                return visitor.visitChildren(self)




    def closeTag(self):

        localctx = TemplateParser.CloseTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_closeTag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(TemplateParser.LT_SLASH)
            self.state = 81
            self.match(TemplateParser.NAME)
            self.state = 82
            self.match(TemplateParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlNode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TemplateParser.HtmlNodeContext)
            else:
                return self.getTypedRuleContext(TemplateParser.HtmlNodeContext,i)


        def getRuleIndex(self):
            return TemplateParser.RULE_htmlContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlContent" ):
                listener.enterHtmlContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlContent" ):
                listener.exitHtmlContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlContent" ):
                return visitor.visitHtmlContent(self)
            else:
                return visitor.visitChildren(self)




    def htmlContent(self):

        localctx = TemplateParser.HtmlContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_htmlContent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 84
                    if not self._input.LA(1) != self.LT_SLASH:
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self._input.LA(1) != self.LT_SLASH")
                    self.state = 85
                    self.htmlNode() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlNodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlElement(self):
            return self.getTypedRuleContext(TemplateParser.HtmlElementContext,0)


        def jinjaPrint(self):
            return self.getTypedRuleContext(TemplateParser.JinjaPrintContext,0)


        def jinjaStmt(self):
            return self.getTypedRuleContext(TemplateParser.JinjaStmtContext,0)


        def TEXT(self):
            return self.getToken(TemplateParser.TEXT, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_htmlNode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlNode" ):
                listener.enterHtmlNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlNode" ):
                listener.exitHtmlNode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlNode" ):
                return visitor.visitHtmlNode(self)
            else:
                return visitor.visitChildren(self)




    def htmlNode(self):

        localctx = TemplateParser.HtmlNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_htmlNode)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.htmlElement()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.jinjaPrint()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.jinjaStmt()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.match(TemplateParser.TEXT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JinjaPrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JPRINT_OPEN(self):
            return self.getToken(TemplateParser.JPRINT_OPEN, 0)

        def expr(self):
            return self.getTypedRuleContext(TemplateParser.ExprContext,0)


        def JPRINT_CLOSE(self):
            return self.getToken(TemplateParser.JPRINT_CLOSE, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_jinjaPrint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJinjaPrint" ):
                listener.enterJinjaPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJinjaPrint" ):
                listener.exitJinjaPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJinjaPrint" ):
                return visitor.visitJinjaPrint(self)
            else:
                return visitor.visitChildren(self)




    def jinjaPrint(self):

        localctx = TemplateParser.JinjaPrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_jinjaPrint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(TemplateParser.JPRINT_OPEN)
            self.state = 98
            self.expr()
            self.state = 99
            self.match(TemplateParser.JPRINT_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JinjaStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jinjaIf(self):
            return self.getTypedRuleContext(TemplateParser.JinjaIfContext,0)


        def jinjaFor(self):
            return self.getTypedRuleContext(TemplateParser.JinjaForContext,0)


        def jinjaSet(self):
            return self.getTypedRuleContext(TemplateParser.JinjaSetContext,0)


        def getRuleIndex(self):
            return TemplateParser.RULE_jinjaStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJinjaStmt" ):
                listener.enterJinjaStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJinjaStmt" ):
                listener.exitJinjaStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJinjaStmt" ):
                return visitor.visitJinjaStmt(self)
            else:
                return visitor.visitChildren(self)




    def jinjaStmt(self):

        localctx = TemplateParser.JinjaStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_jinjaStmt)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.jinjaIf()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.jinjaFor()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.jinjaSet()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JinjaIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JSTMT_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.JSTMT_OPEN)
            else:
                return self.getToken(TemplateParser.JSTMT_OPEN, i)

        def IF(self):
            return self.getToken(TemplateParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(TemplateParser.ExprContext,0)


        def JSTMT_CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.JSTMT_CLOSE)
            else:
                return self.getToken(TemplateParser.JSTMT_CLOSE, i)

        def block(self):
            return self.getTypedRuleContext(TemplateParser.BlockContext,0)


        def ENDIF(self):
            return self.getToken(TemplateParser.ENDIF, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_jinjaIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJinjaIf" ):
                listener.enterJinjaIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJinjaIf" ):
                listener.exitJinjaIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJinjaIf" ):
                return visitor.visitJinjaIf(self)
            else:
                return visitor.visitChildren(self)




    def jinjaIf(self):

        localctx = TemplateParser.JinjaIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_jinjaIf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(TemplateParser.JSTMT_OPEN)
            self.state = 107
            self.match(TemplateParser.IF)
            self.state = 108
            self.expr()
            self.state = 109
            self.match(TemplateParser.JSTMT_CLOSE)
            self.state = 110
            self.block()
            self.state = 111
            self.match(TemplateParser.JSTMT_OPEN)
            self.state = 112
            self.match(TemplateParser.ENDIF)
            self.state = 113
            self.match(TemplateParser.JSTMT_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JinjaForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JSTMT_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.JSTMT_OPEN)
            else:
                return self.getToken(TemplateParser.JSTMT_OPEN, i)

        def FOR(self):
            return self.getToken(TemplateParser.FOR, 0)

        def NAME(self):
            return self.getToken(TemplateParser.NAME, 0)

        def IN(self):
            return self.getToken(TemplateParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(TemplateParser.ExprContext,0)


        def JSTMT_CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.JSTMT_CLOSE)
            else:
                return self.getToken(TemplateParser.JSTMT_CLOSE, i)

        def block(self):
            return self.getTypedRuleContext(TemplateParser.BlockContext,0)


        def ENDFOR(self):
            return self.getToken(TemplateParser.ENDFOR, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_jinjaFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJinjaFor" ):
                listener.enterJinjaFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJinjaFor" ):
                listener.exitJinjaFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJinjaFor" ):
                return visitor.visitJinjaFor(self)
            else:
                return visitor.visitChildren(self)




    def jinjaFor(self):

        localctx = TemplateParser.JinjaForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_jinjaFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(TemplateParser.JSTMT_OPEN)
            self.state = 116
            self.match(TemplateParser.FOR)
            self.state = 117
            self.match(TemplateParser.NAME)
            self.state = 118
            self.match(TemplateParser.IN)
            self.state = 119
            self.expr()
            self.state = 120
            self.match(TemplateParser.JSTMT_CLOSE)
            self.state = 121
            self.block()
            self.state = 122
            self.match(TemplateParser.JSTMT_OPEN)
            self.state = 123
            self.match(TemplateParser.ENDFOR)
            self.state = 124
            self.match(TemplateParser.JSTMT_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JinjaSetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JSTMT_OPEN(self):
            return self.getToken(TemplateParser.JSTMT_OPEN, 0)

        def SET(self):
            return self.getToken(TemplateParser.SET, 0)

        def NAME(self):
            return self.getToken(TemplateParser.NAME, 0)

        def ASSIGN(self):
            return self.getToken(TemplateParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TemplateParser.ExprContext,0)


        def JSTMT_CLOSE(self):
            return self.getToken(TemplateParser.JSTMT_CLOSE, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_jinjaSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJinjaSet" ):
                listener.enterJinjaSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJinjaSet" ):
                listener.exitJinjaSet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJinjaSet" ):
                return visitor.visitJinjaSet(self)
            else:
                return visitor.visitChildren(self)




    def jinjaSet(self):
